--- a/demo-1.html
+++ b/demo-1.html
@@ -98,6 +98,7 @@ span {
       document.getElementById('isp').innerText = data.isp;
     } catch (error) {
       console.error("API Error:", error);
+        alert(error);
     }
   }
   getVisitorData();
