--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NetPulse | Network Insights</title>
+    <title>Geoleaks | Network Insights</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -159,3 +159,4 @@
     <script src="assets/js/app.js"></script>
 </body>
 </html>
+
