Updated the UI and Privacy Features Check
Updated the main UI and Privacy Features Check, also added copy to clipboard for IP text

--- a/terms-of-use/index.html
+++ b/terms-of-use/index.html
@@ -68,7 +68,7 @@
                 <p>In no event shall the owners or developers of Geoleaks be liable for any damages (including, without limitation, loss of data or profit) arising out of the use or inability to use the tool.</p> 
 
                 <h2>7. Contact</h2>
-                <p>If you have questions about how your data is handled, please contact <a href="support@geoleaks.site">support</a></p>
+                <p>If you have questions about how your data is handled, please contact <a href="mailto:support@geoleaks.net">support</a></p>
             </div>
         </section>
 
