--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geoleaks - Network Insights - What is my IP address? </title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css?v=1.2">
     <link rel="canonical" href="https://geoleaks.net/">
     <meta name="description"
         content="What is my IP address and how to find IP address? Geoleaks shows your IP, location, ISP, and ZIP code. Fix leaks with our privacy score. Check your browser, DNS, and location.">
@@ -360,7 +360,8 @@
             </p>
         </footer>
     </main>
-    <script src="assets/js/app.js?v=1.1"></script>
+    <script src="assets/js/app.js?v=1.2"></script>
 </body>
+
 
 </html>
